--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Rollman vs Mewtwo</title>
-        <script type='text/javascript' src='/static/javascript/phaser.js'></script>
-        <script type='text/javascript' src='/static/javascript/game.js'></script>
+        <title>Document</title>
     </head>
     <body>
-        <h1>Rollman vs Mewtwo</h1>
-        <h2>Throwdown at NASA</h2>
     </body>
 </html>
